syntax = "proto3";

package event;

option go_package = "internal/pb;pb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";

// ==== Reâ€‘usable entity =====================================================
message Event {
  string id = 1;
  string title = 2;
  google.protobuf.Timestamp start_time = 3;
  google.protobuf.Duration duration = 4;
  string description = 5;
  string user_id = 6;
  google.protobuf.Duration notify_before = 7;
}

// ==== Requests / responses =================================================
message CreateEventRequest  { Event event = 1; }
message UpdateEventRequest  { Event event = 1; }
message DeleteEventRequest  { string id = 1; }

message ListDayRequest   { string user_id = 1; google.protobuf.Timestamp date        = 2; }
message ListWeekRequest  { string user_id = 1; google.protobuf.Timestamp week_start  = 2; }
message ListMonthRequest { string user_id = 1; google.protobuf.Timestamp month_start = 2; }

message EventResponse   { Event event = 1; }
message EventsResponse  { repeated Event events = 1; }

// ==== Service ==============================================================
service EventService {
  rpc CreateEvent (CreateEventRequest) returns (EventResponse);
  rpc UpdateEvent (UpdateEventRequest) returns (EventResponse);
  rpc DeleteEvent (DeleteEventRequest) returns (google.protobuf.Empty);

  rpc ListDay   (ListDayRequest)   returns (EventsResponse);
  rpc ListWeek  (ListWeekRequest)  returns (EventsResponse);
  rpc ListMonth (ListMonthRequest) returns (EventsResponse);
}
